--- a/loginstyle.css
+++ b/loginstyle.css
@@ -1,5 +1,5 @@
 button {
-    background-color: #4CAF50;
+    background-color: #008CBA;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -18,4 +18,9 @@ input[type=text], input[type=password] {
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
+}
+
+.text{
+    color: #008CBA;
+    font:20px arial;
 }
